# SAAT

./: .env.example  .gitignore  ARCHITECTURE.md  BAC4_INTEGRATION.md  CHANGELOG.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_COMPLETE.md  NEXT_STEPS.md  PR_BODY.md  PR_DESCRIPTION.md  PR_STATUS_UPDATE.md  README.md  RELEASE_NOTES.md  SAAT-AGENTS-GUIDE.md  SHIP_INSTRUCTIONS.md  STATUS.md  V1.0.0_RELEASE_COMPLETE.md  create-pr.sh  create_pr.sh  demo.ts  install-claude-commands.sh  jest.config.js  package.json  pyproject.toml  requirements.txt  sa-agent-toolkit-architecture.md  saat-implementation-prompt.md  saat-readme.md  saat_mcp_server.py  setup-global.sh  tsconfig.json
.claude/: README.md
.claude/commands/: saat-analyze-characteristics.md  saat-discover.md  saat-document.md  saat-full-pipeline.md  saat-generate.md  saat-help.md  saat-orchestrate.md  saat-requirements.md  saat-security.md  saat-terraform.md  saat-validate.md
docs/: AGENTS_QUICK_REFERENCE.md  ARCHCHAR_ANALYSIS_AGENT_PLAN.md  ARCHCHAR_IMPLEMENTATION_SUMMARY.md  ARCHCHAR_INTEGRATION_ANALYSIS.md  ARCHCHAR_JSON_FORMAT.md  ARCHITECTURE_CHARACTERISTICS_REFERENCE.md  ARCHITECTURE_CHARACTERISTICS_USAGE.md  BROWNFIELD_GUIDE.md  CUSTOMIZATION_GUIDE.md  GREENFIELD_GUIDE.md
examples/: analyze_archchar.py  archchar-ecommerce.json  c4-ecommerce.json  greenfield_project.py  quick_start.py  requirements.md  surveyerbookingapp.rtf
saat/: __init__.py  broker.py  cli.py  client.py  converters.py  converters_archchar.py  models.py  models_archchar.py  structurizr.py
saat/agents/: __init__.py  archchar.py  base.py  discovery.py  documentation.py  generator.py  requirements.py  security.py  terraform.py  validation.py
src/: index.ts
src/agents/: base-agent.ts  discovery-agent.ts  json-generator-agent.ts
src/broker/: architectural-context.ts  context-broker.ts  context-memory.ts
src/cli/: index.ts
src/core/: types.ts
src/llm/: claude-client.ts
